--- a/MyInstagram/static/styles/pages/index.css
+++ b/MyInstagram/static/styles/pages/index.css
@@ -138,3 +138,12 @@
     border: none;
     width: 484px;
 }
+.more-cont {
+    margin: 50px auto 20px;
+    height: 120px;
+    width: 120px;
+    text-align: center;
+    line-height: 120px;
+    border-radius: 50%;
+    border: 2px solid #3897f0;
+}
